# mcp-server

./: README.md  pyproject.toml
server/: weather.json  weather.py
